Issue #21124: Fix building _struct on Cygwin.

Patch by Masayuki Yamamoto.